this app is not secure yet

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Sign up form</title>
+        <title>EazyPay</title>
     </head>
     <body>
 
-        <h1>Sign up to the event using this form</h1>
+        <h1>Welcome to EazyPay</h1>
+        <div>New fun and interactive way to send easily funds to whoever you want!</div>
 
-        <form action="#" th:action="@{/form}" method="POST">
-            <p><label for="name">Name</label>: <input type="text" name="name" id="name"/></p>
-            <p><label for="address">Address</label>: <input type="text" name="address" id="address"/></p>
+        <h1>Sign into your account</h1>
+        <div th:if="${message != null}" th:text="${message}">Message</div>
+
+        <form action="#" th:action="@{/login}" method="POST">
+            <p><label for="username">Username: </label>: <input type="text" name="username" id="username"/></p>
+            <p><label for="password">Password: </label>: <input type="password" name="password" id="password"/></p>
             <p><input type="submit" value="Submit" /></p>
         </form>
+
+        <h2>Dont have account? <a href="/create">Create one</a></h2>
 
         <p></p>
     </body>
